2001-03-22  NISHIDA Masakazu  <m_nisida@ca2.so-net.ne.jp>

	* mu-register.el (mu-cite-get-prefix-register-verbose-method):
	Support X-Cite-Me as well as X-Attribution.
	(mu-cite-get-prefix-register-method): Ditto.
	* mu-bbdb.el (mu-bbdb-get-prefix-register-verbose-method): Ditto.
	(mu-bbdb-get-prefix-register-method): Ditto.
	* mu-cite.el (mu-cite-default-methods-alist): Ditto.

2001-03-09  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-cite.el (fill-column-for-fill-cited-region): New user option.
	(fill-cited-region): Prefer `fill-column-for-fill-cited-region' if
	it is an integer rather than `fill-column'.

2001-02-23  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-cite.el (char-category): Force redefine as a function because
	it may have been defined by emu.el;  don't use `int-char' for
	XEmacs if the function `char-category-list' returns a list of
	characters;  enclose the whole form with `eval-and-compile'.

	* MU-CFG: Define the function `add-to-list' for a makeshift.

	* MU-MK: Define byte-optimizer for replacing `sref' with `aref';
	silence XEmacs not to say "bound but not referenced".
	(byte-compile-file-form-custom-declare-variable): Define it for old
	Emacsen.

	* mu-cite.el: Undo the last change.

2001-02-23  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-cite.el: Require `emu' as well as `poem' because we have need
	to pickup the function `char-category' for XEmacs.

2001-02-02  Keiichi Suzuki  <keiichi@nanap.org>

	* mu-cite.el (top level): Require `poem' instead of `poe' for
	`char-next-index'.

2000-09-04  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-cite.el (mu-cite-default-methods-alist): Don't include
	`ml-count' in `id' if it is not available.

2000-05-25  Tanaka Akira      <akr@m17n.org>

	* README.en: Update for CVS via SSH.

2000-01-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* Makefile: Update for the new CVS server.


1999-12-16  Katsumi Yamaoka   <yamaoka@jpl.org>

	* MU-CITE: Version 8.1 was released.

1999-12-16  Katsumi Yamaoka   <yamaoka@jpl.org>
